Login y main
Correcion de login y configuracion de la base de datos